<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_1"
            android:visibility="visible">

            <TextView
                android:id="@+id/month"
                android:layout_width="@dimen/timetable_label_width"
                android:layout_height="match_parent"
                android:alpha="0.9"
                android:gravity="center"
                android:text="12月"
                android:textColor="#F0FFFFFF"
                android:textSize="11sp"
                    android:textStyle="bold"
                android:visibility="visible" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/element_round_primary_lighter"
                    android:backgroundTint="?attr/backgroundColorSecond"
                    android:backgroundTintMode="src_in"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tt_monday"
                    android:textColor="#F0FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:shadowColor="#80000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2.5" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/element_round_primary_lighter"
                    android:backgroundTint="?attr/backgroundColorSecond"
                    android:backgroundTintMode="src_in"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tt_tuesday"
                    android:textColor="#F0FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:shadowColor="#80000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2.5" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/element_round_primary_lighter"
                    android:backgroundTint="?attr/backgroundColorSecond"
                    android:backgroundTintMode="src_in"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tt_wednesday"
                    android:textColor="#F0FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:shadowColor="#80000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2.5" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/element_round_primary_lighter"
                    android:backgroundTint="?attr/backgroundColorSecond"
                    android:backgroundTintMode="src_in"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tt_thursday"
                    android:textColor="#F0FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:shadowColor="#80000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2.5" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/element_round_primary_lighter"
                    android:backgroundTint="?attr/backgroundColorSecond"
                    android:backgroundTintMode="src_in"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tt_friday"
                    android:textColor="#F0FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:shadowColor="#80000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2.5" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/element_round_primary_lighter"
                    android:backgroundTint="?attr/backgroundColorSecond"
                    android:backgroundTintMode="src_in"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tt_saturday"
                    android:textColor="#F0FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:shadowColor="#80000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2.5" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/element_round_primary_lighter"
                    android:backgroundTint="?attr/backgroundColorSecond"
                    android:backgroundTintMode="src_in"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tt_sunday"
                    android:textColor="#F0FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:shadowColor="#80000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2.5" />
            </FrameLayout>

        </LinearLayout>

        <com.limpu.hitax.ui.widgets.VerticalNestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.limpu.hitax.ui.main.timetable.views.LeftLabelView
                    android:id="@+id/labels"
                    android:layout_width="@dimen/timetable_label_width"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/timetable_date_height"
                    app:timeLabelColor="#E8FFFFFF"
                    app:timeLabelSize="12sp" />

                <com.limpu.hitax.ui.widgets.WrapContentHeightViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never" />
            </LinearLayout>
        </com.limpu.hitax.ui.widgets.VerticalNestedScrollView>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/space_4"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/white"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@drawable/ic_baseline_settings_backup_restore_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
